Add picture of food, include brief recipe

--- a/recipes/vegmanchuria.html
+++ b/recipes/vegmanchuria.html
@@ -1,2 +1,28 @@
 <h1>Veg Manchuria</h1>
 
+<img src="../img/vegmanch.jpeg">
+
+<h2>Description</h2>
+    <p>
+        This is one of the best dishes known to humankind. It can
+        utilize cauliflower, or dough, I think, as main ingredient
+        for the Manchuria. Complimented by string onions, the 
+        green ones, with regular onions and viola -> 
+        Impeccable taste and crunch. 
+    </p>
+
+<h2>Ingredients</h2>
+<ul>
+    <li>Tomato, probably</li>
+    <li>Onions</li>
+    <li>Spring Onions</li>
+    <li>Soy sauce</li>
+    <li>Salt</li>
+    <li>Spice</li>
+    <li>Water</li>
+    <li>YouTube, because you shouldn't trust me</li>
+</ul>
+<h2>How to make</h2>
+<ol>
+    <li>Watch YouTube</li>
+</ol>
